# Addons

./: .gitignore  Cargo.toml
crates/backend/: Cargo.toml
crates/backend/src/: error.rs  main.rs
crates/backend/src/http/: addon.rs  dev.rs  mod.rs  vissl.rs  website.rs
crates/blog/dashboard/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
crates/blog/dashboard/src/: main.ts
crates/blog/dashboard/src/routes/: +page.svelte
crates/common/: Cargo.toml
crates/common/src/: api.rs  generate.rs  global.rs  id.rs  lib.rs  widget.rs
crates/common/src/upload/: mod.rs
crates/database/: Cargo.toml
crates/database/migrations/: 10_widget_ref.sql  11_schema.sql  12_site_template_page.sql  13_addon_instance_versions.sql  14_addon_instance_fixes.sql  15_compiled_and_widgets.sql  16_addon_widget_settings.sql  1_init.sql  2_addon_perms.sql  3_addon_member_uuid.sql  4_addon_action.sql  5_addon_instance.sql  6_addon_instance_addon_id.sql  7_addon_dash_pages.sql  8_addon_root_dash_page.sql  9_addon_page_show.sql
crates/database/src/: database.rs  lib.rs
crates/database/src/model/: addon.rs  addon_media.rs  developer.rs  developer_member.rs  media_upload.rs  mod.rs  schema.rs  schema_data.rs  schema_data_tag.rs
crates/database/src/model/addon/: addon.rs  automation.rs  compiled_addon.rs  compiled_page.rs  compiled_widget.rs  dashboard_page.rs  extension.rs  instance.rs  media.rs  mod.rs  permission.rs  site_template.rs  site_template_content.rs  site_widget.rs  webhook.rs  website_widget_settings.rs  widget_content.rs  widget_panel.rs
crates/database/src/model/settings/: install_setting.rs  mod.rs
crates/database/src/model/vissl/: mod.rs  vissl_code_addon.rs  vissl_code_addon_panel.rs
