[workspace]
members = ["./crates/backend", "./crates/database"]


[workspace.dependencies]
global-common = { git = "https://github.com/webby-creator/Global-Common", version = "0.1.0" }
tokio = { version = "1.39" }

serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
eyre = "0.6"
thiserror = "1.0"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

rand = "0.8"
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
num_enum = "0.7"
time = { version = "0.3", features = ["serde-human-readable", "macros"] }
lazy_static = "1.5"

sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
