[package]
name = "addons-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../../../website/crates/api" }
storage = { path = "../../../website/crates/storage" }

global-common = { path = "../../../global-common" }
addon-common = { path = "../../../addon-common" }
database = { path = "../database" }
local-common = { path = "../common" }

hyper = "1.4"
axum = { version = "0.7", features = ["multipart"] }
tower-sessions-sqlx-store = { version = "0.12", features = ["sqlite"] }
tower-sessions = { path = "../../../tower-sessions" }
axum-login = "0.15"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = [
    "fs",
    "trace",
    "cors",
    "validate-request",
] }

tokio = { workspace = true, features = ["full"] }
futures = "0.3"
mime_guess = "2.0"
image = { version = "0.25", features = ["webp"] }

serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { version = "0.13", features = ["axum"] }
eyre = { workspace = true }
thiserror = { workspace = true }

tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }

reqwest = "0.12"
lazy_static = "1.5"
url = "2.5"
sha2 = "0.10"
uuid = { workspace = true, features = ["v4", "v7", "serde"] }
num_enum = { workspace = true }
time = { workspace = true }
rand = { workspace = true }

sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
