[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.9"

uuid = { workspace = true }
num_enum = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
sqlx = { workspace = true }

# Upload Common
btwo = { path = "P:/Coding/Rust/2023/btwo-backblaze" }

axum = { version = "0.7", features = ["multipart"] }
async-trait = "0.1"

log = "0.4"
lazy_static = "1.5"
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
concread = "0.5"
image = { version = "0.25", features = ["webp"] }
bytes = "1.6"
bcrypt = "0.15"
mime = "0.3"
mime_guess = "2.0"
sha1 = "0.10"
sha2 = "0.10"
rand_hc = "0.3"
rand = "0.8"
