[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
scripting = { git = "https://github.com/webby-creator/Scripting", version = "0.1.0" }
storage = { path = "../../../website/crates/storage" }
api = { path = "../../../website/crates/api", features = ["sqlx"] }

global-common = { workspace = true, features = ["sqlx"] }
local-common = { path = "../common" }

serde = { workspace = true }
serde_json = { workspace = true }

eyre = { workspace = true }
tracing = { workspace = true }

uuid = { workspace = true }
num_enum = { workspace = true }
time = { workspace = true }
lazy_static = { workspace = true }

[dependencies.sqlx]
workspace = true
features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "time",
    "ipnetwork",
    "json",
    "uuid",
]
