[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
webby-scripting = { version = "0.1.1", registry = "tasty" }
webby-storage = { version = "0.1.0", registry = "tasty" }
webby-api = { version = "0.1.0", registry = "tasty", features = ["sqlx"] }

webby-global-common = { workspace = true, features = ["sqlx"] }
local-common = { path = "../common" }

serde = { workspace = true }
serde_json = { workspace = true }

eyre = { workspace = true }
tracing = { workspace = true }

uuid = { workspace = true }
num_enum = { workspace = true }
time = { workspace = true }
lazy_static = { workspace = true }

[dependencies.sqlx]
workspace = true
features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "time",
    "ipnetwork",
    "json",
    "uuid",
]
